Networking/Gateway API/pathbased-routing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-path-ingress
  namespace: ingress-lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-lab
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: webapp1-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: webapp2-service
            port:
              number: 80
