Networking/Gateway API/webapp2-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: webapp2-route
  namespace: ingress-lab
spec:
  parentRefs:
  - name: webapp-gateway
  hostnames:
  - "gateway-app2.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: webapp2-service
      port: 80
      weight: 80
    - name: webapp1-service
      port: 80
      weight: 20
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: webapp2-service
      port: 80
